fix::overflow feed

--- a/src/Pages/Blog/Blog.module.css
+++ b/src/Pages/Blog/Blog.module.css
@@ -4,7 +4,6 @@
    flex-direction: column;
    align-items: center;
    height: 100vh;
-   overflow-y: scroll;
 }
 
 .blog::-webkit-scrollbar{
